* August 12th, 2018
** Native support for tables!
| ta | da |
|----+----|
| 🎉 | 🎊 |
*** Tables will now be rendered as HTML tables
*** When a table cell is selected, the action drawer will populate with additional actions to manipulate tables (more details on this in the sample file)
*** Format specifiers (like <r> and <10>) aren't yet natively supported
* August 9th, 2018
** Improved navigation with back buttons a la an iOS UINavigationController
* August 6th, 2018
** Implemented new setting to store settings in a .org-web-config.json file in your Dropbox. This will keep settings in sync across multiple devices.
* August 2nd, 2018
** Added keyboard shortcuts, as well as a way to set custom bindings
*** Find it in Settings > Keyboard shortcuts
* August 1st, 2018
** Added routing (and therefore back/forward button support)
* July 31st, 2018 (afternoon)
** Implemented a "Focus" button - see the sample file for details.
** Other minor niceties and bug fixes.
* July 31st, 2018
** Finished a complete rewrite to use more modern tooling and best practices
*** Achieved almost complete parity with the original version, minus a couple features that weren't used often. Please let me know if those features were important to you (or if you notice any bugs) by [[https://github.com/DanielDe/org-web/issues/new][creating an issue]].
** More features coming soon!
* July 4th, 2017
** Fixed bug with preserving header openness state across reloads
* June 3rd, 2017
** Added setting to preserve open headers across reloads
* May 29th, 2017
** Added setting to enable tapping the TODO label to advance the TODO state
** Fixed export bug that caused blank descriptions to be exported as a newline
* May 21st, 2017
** Added some schnazzy (sp?) icons to the file chooser
* May 20th, 2017
** Added force touch/3d touch on devices that support it
*** Force push the add header button (+) to reveal a new button that adds a new TODO header
*** More uses of force push to come!
* May 13th, 2017